# bpf4

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  build-wheels-local  inside-docker.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  update-readme
.github/workflows/: wheels.yml
bpf4/: __init__.py  __init__.pyi  api.py  arraytools.py  bench.py  config.py  core.pyi  core.pyx  csvtools.py  plot.py  pyinterp.py  tests.py  util.py  version.py  wafointerpol.py
docker/: build-wheels.sh
docs/: api.md  core.md  generatedocs.py  index.md  reference.md  util.md
docs/stylesheets/: extra.css
tests/: tests.py
travis/: build-wheels.sh
