[project]
name = "bpf4"
description = "Peace-wise interpolation and lazy evaluation in cython"
authors = [
    { name = "Eduardo Moguillansky", email = "eduardo.moguillansky@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires_python = "^3.8"
homepage = "https://github.com/gesellkammer/bpf4"
repository = "https://github.com/gesellkammer/bpf4"

dependencies = [
  'numpy>=1.22',
  'matplotlib',
  'scipy'
]

classifiers = [
    "Topic :: Software Development"
]

[build-system]

requires = [
    "setuptools>=42",
    "wheel",
    "cython",
    "numpy>=1.22"
]

build-backend = "setuptools.build_meta"

