[build-system]

requires = [
    "setuptools>=42",
    "wheel",
    "cython>=3.0",
    "numpy>=2.0"
]

build-backend = "setuptools.build_meta"

[project]
version = "1.13.1"
name = "bpf4"
description = "Piece-wise interpolation and lazy evaluation in cython"
authors = [
	{ name = "Eduardo Moguillansky", email = "eduardo.moguillansky@gmail.com" },
]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    'Topic :: Multimedia :: Sound/Audio',
]

dependencies = [
	'numpy>=2.0', 
	'matplotlib', 
	'scipy', 
	'visvalingamwyatt'
]

[tool.setuptools]
packages = ["bpf4"]

ext-modules = [
	{name="bpf4.core", sources=["bpf4/core.pyx"], include-dirs=["bpf4"], py-limited-api=true}
]


[project.urls]

Homepage = "https://github.com/gesellkammer/bpf4"
